--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,23 @@
+nav {
+  background-color: rgb(15, 15, 15);
+}
 nav ul li {
   display: inline-block;
   width:25%;
   padding: 10px;
-  border-right: 1px solid #000;
+
 }
 nav ul{
   border-bottom: 1px solid #000;
+}
+nav ul li a {
+  color: rgb(255, 255, 255);
+}
+nav ul li a:hover, nav ul li a:active, nav ul li a:focus {
+  color: #969696;
+  text-decoration: none;
+}
+
+#main-title{
+  text-align: center;
 }
