Minor changes to carousel

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,18 @@ nav ul li a:hover, nav ul li a:active, nav ul li a:focus {
   text-decoration: none;
 }
 
+/*#main-carousel .carousel-inner .item img {
+  width: 1300px;
+  height: 500px;
+}*/
+
+#main-carousel .carousel-inner .item {
+  width: 80%;
+  max-width: 1000px;
+  min-width: 600px;
+  margin: 0 auto;
+}
+
 #main-title{
   text-align: center;
 }
