Centered the carousel text

--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,12 @@ nav ul li a:hover, nav ul li a:active, nav ul li a:focus {
   height: 500px;
 }*/
 
-#main-carousel .carousel-inner .item {
-  width: 80%;
-  max-width: 1000px;
-  min-width: 600px;
+#main-carousel .carousel-inner .item img {
+  margin: 0 auto;
+}
+
+#main-carousel .carousel-inner .item .carousel-caption {
+  width: 400px;
   margin: 0 auto;
 }
 
