--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,11 +55,13 @@
 
     {{ content }}
 
-    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
     <script>
-      window.jQuery || document.write('<script src="/js/vendor/jquery-1.12.0.min.js"><\/script>')
+      window.jQuery || document.write('<script src="/js/vendor/jquery-3.3.1.min.js"><\/script>')
     </script>
-    <script src="/js/plugins.js"></script>
     <script src="/js/main.js"></script>
     {% for js in page.scripts %}
     <script src="{{ js }}"></script>
