Serve local images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
   <div id="products">
     <div class="nav">
-      <img class="logo" src="https://farm6.staticflickr.com/5826/23908848555_aa7fbb2d91_b.jpg" />
+      <img class="logo" src="/images/logo-sm.jpg" />
       <div class="nav-links">
 
         <a href="#">About</a>
