--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,9 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/main.css">
-  <script src="/js/vendor/modernizr-2.8.3.min.js"></script>
+  <link rel="stylesheet" href={{ "/css/normalize.css" | relative_url }}>
+  <link rel="stylesheet" href={{ "/css/main.css" | relative_url }}>
+  <script src={{ "/js/vendor/modernizr-2.8.3.min.js" | relative_url }}></script>
   {% for css in page.stylesheets %}
   <link rel="stylesheet" href="{{ css }}">
   {% endfor %}
@@ -28,7 +28,7 @@
 
   <div id="products">
     <div class="nav">
-      <img class="logo" src="/images/logo-sm.jpg" />
+      <img class="logo" src={{ "/images/logo-sm.jpg" | relative_url }} />
       <div class="nav-links">
 
         <a href="#">About</a>
@@ -60,9 +60,9 @@
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"></script>
     <script>
-      window.jQuery || document.write('<script src="/js/vendor/jquery-3.3.1.min.js"><\/script>')
+      window.jQuery || document.write('<script src={{ "/js/vendor/jquery-3.3.1.min.js" | relative_url }}><\/script>')
     </script>
-    <script src="/js/main.js"></script>
+    <script src={{ "/js/main.js" | relative_url }}></script>
     {% for js in page.scripts %}
     <script src="{{ js }}"></script>
     {% endfor %}
