update imports link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 
         <div class="divider"></div>
 
-        <a href="#">Imports</a>
+        <a href={{ "/products" | relative_url }}>Imports</a>
 
         <div class="divider"></div>
 
