--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 
         <div class="divider"></div>
 
-        <a href="#">Harambee Christian School</a>
+        <a href="https://urbanconcern.org/harambee/">Harambee Christian School</a>
 
         <div class="divider"></div>
 
